crates/test-files/fixtures/compile_errors/bad_tuple_attr1.fe
// See ethereum/fe issue //396
contract foo {
    my_sto_tuple: (u256, i32)

    pub fn bar(self) {
        self.my_sto_tuple.iteo0
    }
}
